RESOLVED FIXED193953
Regression(r240046) VoiceOver is no longer working after a process swap
https://bugs.webkit.org/show_bug.cgi?id=193953
Summary Regression(r240046) VoiceOver is no longer working after a process swap
Chris Dumez
Reported 2019-01-28 21:30:05 PST
VoiceOver is no longer working after a process swap since r240046.
Attachments
Patch (6.51 KB, patch)
2019-01-28 21:35 PST, Chris Dumez
no flags
Chris Dumez
Comment 1 2019-01-28 21:30:21 PST
Chris Dumez
Comment 2 2019-01-28 21:35:56 PST
chris fleizach
Comment 3 2019-01-29 00:54:35 PST
Comment on attachment 360436 [details] Patch Looks ok to me
Chris Dumez
Comment 4 2019-01-29 08:59:21 PST
(In reply to chris fleizach from comment #3) > Comment on attachment 360436 [details] > Patch > > Looks ok to me Thanks for checking.
Chris Dumez
Comment 5 2019-01-29 09:16:39 PST
Comment on attachment 360436 [details] Patch Clearing flags on attachment: 360436 Committed r240659: <https://trac.webkit.org/changeset/240659>
Chris Dumez
Comment 6 2019-01-29 09:16:41 PST
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.